--- a/demo/package.json
+++ b/demo/package.json
@@ -10,6 +10,7 @@
     "ac-qrcode": "^1.0.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
+    "react-native-cookies": "^3.2.0",
     "react-native-simple-toast": "0.0.5",
     "react-navigation": "^1.0.0-beta.7"
   },
