--- a/demo/package.json
+++ b/demo/package.json
@@ -10,10 +10,13 @@
     "ac-qrcode": "^1.0.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
+    "react-native-cookie": "^0.2.0",
     "react-native-cookies": "^3.2.0",
     "react-native-divide": "^1.0.1",
     "react-native-simple-toast": "0.0.5",
-    "react-navigation": "^1.0.0-beta.7"
+    "react-native-swiper": "^1.5.12",
+    "react-navigation": "^1.0.0-beta.7",
+    "react-timer-mixin": "^0.13.3"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
