--- a/demo/package.json
+++ b/demo/package.json
@@ -13,6 +13,8 @@
     "react-native-cookie": "^0.2.0",
     "react-native-cookies": "^3.2.0",
     "react-native-divide": "^1.0.1",
+    "react-native-multiple-choice": "0.0.8",
+    "react-native-radio-buttons": "^1.0.0",
     "react-native-simple-toast": "0.0.5",
     "react-native-swiper": "^1.5.12",
     "react-navigation": "^1.0.0-beta.7",
